<resources>
    <string name="app_name">Spectragrow</string>
    <string name="skip_btn">Skip</string>
    <string name="title_ob">Selamat Datang \n di Spectragrow</string>
    <string name="title_ob1">Temukan rekomendasi tanaman \nuntuk lahan pertanianmu</string>
    <string name="title_ob2">Amati kondisi tanah dengan \nteknologi canggih kami</string>
    <string name="title_ob3">Maksimalkan lahan pertanianmu \ndalam satu genggaman</string>
    <string name="subtitle_ob1">Memberikan rekomendasi beragam \ntanaman sesuai dengan \nkondisi tanahmu</string>
    <string name="subtitle_ob2">Ketahui kondisi tanah sekitar \ndengan model AI satelit \nsentinel-2A</string>
    <string name="subtitle_ob3">Semua fitur tersebut tersedia \ndalam satu aplikasi</string>
    <string name="btn_google">Masuk dengan Google</string>
    <string name="reg_btn">Mendaftar</string>
    <string name="log_btn">Masuk</string>
    <string name="login_fragment_title">Masuk Akun</string>
    <string name="email_form">Surel</string>
    <string name="password_form">Kata sandi</string>
    <string name="forgot_pw">Lupa kata sandi</string>
    <string name="snk">Saya menyetujui syarat dan ketentuan yang berlaku.</string>
    <string name="dont_have_an_account">Belum memiliki akun?</string>
    <string name="tv_register">Daftar sekarang</string>
    <string name="have_an_account">Sudah memiliki akun?</string>
    <string name="tv_login">Masuk sekarang</string>
    <string name="username_form">Nama pengguna</string>
    <string name="confirm_password_form">Konfirmasi kata sandi</string>
    <string name="register_fragment_title">Daftar Akun</string>
    <string name="maps_btn">Maps</string>
    <string name="logout_btn">Keluar</string>
    <string name="welcome_username">Selamat datang, %s</string>
    <string name="item_title">Rekomendasi Media Tanam</string>
    <string name="item_title_fertilizer">Rekomendasi Pupuk</string>
    <string name="ph">pH</string>
    <string name="natrium">Nitrogen</string>
    <string name="fosfor">Fosfat</string>
    <string name="kalium">Kalium</string>
    <string name="bahan_organik">Bahan organik</string>
    <string name="air">Kadar Air</string>
    <string name="skl">SKL</string>
    <string name="tekstur_tanah">Tekstur tanah</string>
    <string name="fertilizer_detail">Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="input_plant">\tMasukan nama tanaman</string>
    <string name="dummy">Lorem ipsum</string>
    <string name="detail_item">Detail Item</string>
    <string name="dummy_value_int">N/A</string>
    <string name="item_thumbnail">Gambar untuk tanaman</string>
    <string name="story_thumbnail">Gambar untuk cerita pengguna</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="location">Lokasi saat ini</string>
    <string name="add_story">Tambahkan Cerita</string>
    <string name="btn_add">Tambah cerita</string>
    <string name="field_empty">Bagian ini perlu diisi.</string>
    <string name="email_password_incorrect">Surel atau kata sandi salah</string>
    <string name="snk_uncheck">Harap setujui syarat dan ketentuan kami!</string>
    <string name="forgot_pw_success">Email ubah password telah dikirim</string>
    <string name="forgot_pw_unsuccess">Email ubah password gagal terkirim</string>
    <string name="register_failed">Pendaftaran gagal</string>
    <string name="title_story_hint">Tulis judul cerita anda</string>
    <string name="desc_story_hint">Tulis cerita anda</string>
    <string name="unknown_location">Lokasi tidak ditemukan</string>
    <string name="incorrect_email_format">Format surel tidak sesuai.</string>
    <string name="incorrect_pw_format">Kata sandi minimal 8 karakter.</string>
    <string name="password_not_match">Konfirmasi kata sandi tidak sesuai</string>
    <string name="item_title_plant">Rekomendasi tanaman</string>
    <string name="identifier_title">Karakteristik tanah</string>
    <string name="bahan_organik2">Bahan organik</string>
    <string name="ph_details"><b>Pengaruh terhadap produktivitas:</b> \npH optimal untuk sebagian besar tanaman berada pada kisaran 6–7, di mana unsur hara esensial paling tersedia. Tanah yang terlalu asam atau basa bisa menyebabkan defisiensi nutrisi, menghambat pertumbuhan, dan menurunkan hasil panen. (Data memiliki range 0 sampai 14, dengan 7 sebagai asam, 7 netral, dan >7 sebagai basa). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="n_details"><b>Pengaruh terhadap produktivitas:</b> \nMeningkatkan pertumbuhan daun dan batang yang sehat, sehingga tanaman dapat menangkap lebih banyak cahaya matahari dan berfotosintesis secara efisien. (Data dalam satuan parts per million (ppm)). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="p_details"><b>Pengaruh terhadap produktivitas:</b> \nMembantu pengembangan sistem akar yang kuat dan memperbaiki kemampuan tanaman untuk menyerap nutrisi dan air, yang akhirnya meningkatkan hasil panen. (Data dalam satuan parts per million (ppm)). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="k_details"><b>Pengaruh terhadap produktivitas:</b> \nMemperkuat ketahanan tanaman terhadap kondisi lingkungan buruk dan meningkatkan kualitas serta kuantitas hasil panen. (Data dalam satuan parts per million (ppm). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="ka_details"><b>Pengaruh terhadap produktivitas:</b> \nKadar air yang memadai mendukung pertumbuhan yang sehat. Tanaman yang kekurangan air akan mengalami penurunan laju fotosintesis, sementara kelebihan air bisa menyebabkan akar membusuk dan menghambat pertumbuhan. (Memiliki satuan desimal, dengan range 0–1). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="tt_details"><b>Pengaruh terhadap produktivitas:</b> \nTekstur tanah yang baik mendukung pengembangan akar yang sehat dan mempermudah akses tanaman ke air dan nutrisi. Tekstur yang terlalu berpasir atau terlalu liat dapat mengganggu pertumbuhan tanaman. (Memiliki 3 klasifikasi, yaitu pasir, lempung, liat). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="skl_details"><b>Pengaruh terhadap produktivitas:</b> \nLahan dengan kemampuan yang baik akan mendukung pertumbuhan optimal tanaman. Tanaman yang ditanam di lahan yang tidak sesuai dengan kemampuannya akan menunjukkan penurunan hasil karena faktor lingkungan yang tidak mendukung pertumbuhan (memiliki range nilai -1 sampai 1 dengan 6 klasifikasi, yaitu sangat rendah, rendah, agak rendah, agak tinggi, tinggi sangat tinggi). Data ini didapatkan berasal dari pantulan panjang gelombang satelit sentinel-2A</string>
    <string name="temp_details"><b>Pengaruh terhadap produktivitas:</b> \n<b>Fotosintesis:</b> Suhu optimal meningkatkan fotosintesis dan pertumbuhan tanaman.\n<b>Pertumbuhan akar:</b> Suhu hangat mendukung pemanjangan sel dan pertumbuhan akar/daun. Suhu ekstrem dapat merusak tanaman.\n<b>Pembungaan:</b> Suhu tertentu diperlukan untuk proses pembungaan. Suhu yang terlalu tinggi atau rendah bisa menghambat pembentukan bunga dan buah. \nData ini memiliki satuan pengukuran celcius didapatkan dari OpenWeatherMap API</string>
    <string name="high_details"><b>Pengaruh terhadap produktivitas:</b> \n<b>Suhu:</b> Semakin tinggi elevasi, semakin rendah suhu, yang bisa memperlambat pertumbuhan tanaman.\n<b>Cahaya Matahari:</b> Di elevasi tinggi, cahaya matahari lebih kuat, yang bisa meningkatkan fotosintesis tetapi juga menyebabkan stres.\n<b>Kelembapan:</b> Di ketinggian tinggi, kelembapan lebih rendah, sehingga risiko kekeringan lebih besar. \nData ini memiliki satuan meter diatas permukaan laut (mdpl) dan didapatkan dari elevation API</string>
    <string name="temp">Suhu</string>
    <string name="high">Elevasi</string>
    <string name="title_story">Cerita Pertanian</string>
    <string name="title_maps">Peta Pertanian</string>

</resources>