<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/accordion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ph"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:id="@+id/ll_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/ph_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ph"
                    android:textSize="18sp"
                    android:padding="10dp" />
                <TextView
                    android:id="@+id/ph_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_details"
                    android:padding="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_natrium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:id="@+id/ll_natrium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/natrium_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/natrium"
                    android:textSize="18sp"
                    android:padding="10dp" />
                <TextView
                    android:id="@+id/natrium_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/n_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_fosfat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_fosfat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/fosfat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fosfor"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/fosfat_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_kalium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_kalium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/kalium_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kalium"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/kalium_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/k_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_ka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/ka_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/ka_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ka_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_tt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tekstur_tanah"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/tt_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tt_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_skl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_skl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/skl_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skl"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/skl_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skl_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/temp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/temp_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:id="@+id/ll_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/high_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/high_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/high_details"
                    android:padding="10dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
