<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.auth.LoginFragment"
    android:background="@drawable/ob_bg"
    android:id="@+id/login_fragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/login_fragment_title"
        android:fontFamily="@font/bold"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:layout_margin="50dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_title"
        android:text="@string/email_form"
        android:fontFamily="@font/semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="20dp"/>

    <com.pkmkcub.spectragrow.view.customview.Email
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:background="@drawable/rounded_button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_title"
        android:text="@string/password_form"
        android:fontFamily="@font/semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_margin="20dp"/>

    <com.pkmkcub.spectragrow.view.customview.Password
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/visibility_off"
        android:drawableTint="@color/black"
        android:imeOptions="actionDone"
        android:background="@drawable/rounded_button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pw"
        android:text="@string/forgot_pw"
        android:fontFamily="@font/semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snk_check"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/snk"
        android:fontFamily="@font/semibold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:buttonTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/forgot_pw"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:layout_margin="30dp"
        android:text="@string/log_btn"
        android:textSize="14sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/white_base"
        android:background="@drawable/btn_primary_states"
        android:backgroundTint="@color/yellow_pattern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snk_check"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dont_have_account"
        android:text="@string/dont_have_an_account"
        android:fontFamily="@font/semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="5dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/tv_register"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dont_have_account" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>